# morxthegamer

./: .breakpoints  .env  README.md  alive.html  alive.py  bot.py  cmds.txt  commands.txt  data.js  index.html  index.js  index.ts  main.py  package-lock.json  package.json  pyproject.toml  run.sh  serv.html  serv.js  server.js
botfiles/: cmds.txt
botsfiles/: cmds.txt  shorts.txt
userWarnings/:  23472231.json  ctx.object.js
userfiles/: file863.txt
